@@ -2,6 +2,10 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-6.0_alpha7.ebuild:
+  Added dep on proguard + corrected js173 link path
+
   04 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
   netbeans-6.0_alpha7.ebuild:
   Changed dependency from javahelp-bin to javahelp
